kubernetes/nginx-ingress/demo2-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo2-svc-lb
  namespace: demo
spec:
  selector:
    app: nginx-demo2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
