kubernetes/nginx-ingress/demo1-ingress-lb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo1-ingress-lb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
    - host: lb.gpg123.vip
      http:
        paths:
          - path: /nginx1
            pathType: Prefix
            backend:
              service:
                name: nginx-demo1-svc-lb
                port:
                  number: 80
